--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-  // image of web site  in top
+   <!-- image of web site  in top -->
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />  -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
