--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
    <!-- image of web site  in top -->
+   html check
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />  -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
